[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/characters/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/Level.gd" type="Script" id=2]
[ext_resource path="res://fonts/Pixels TEXT.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/spawners/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/world/Wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/UFO.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/particles/asteroids/asteroid1.png" type="Texture" id=8]
[ext_resource path="res://images/particles/asteroids/asteroid3.png" type="Texture" id=9]
[ext_resource path="res://images/particles/asteroids/asteroid2.png" type="Texture" id=10]
[ext_resource path="res://images/particles/asteroids/asteroid4.png" type="Texture" id=11]
[ext_resource path="res://images/particles/asteroids/asteroid5.png" type="Texture" id=12]
[ext_resource path="res://images/white_square.png" type="Texture" id=13]
[ext_resource path="res://src/addons/Screenshake.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/HUD/LetsGo.tscn" type="PackedScene" id=15]
[ext_resource path="res://sounds/music/GAME JDB_City_of_Night_Seq.ogg" type="AudioStream" id=16]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.240741, 0.734568, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0728477, 0.910596, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Level1" type="Node2D" groups=[
"levels",
]]
script = ExtResource( 2 )

[node name="Particles" type="Node" parent="."]

[node name="Starfield" type="CPUParticles2D" parent="Particles"]
self_modulate = Color( 0.113725, 0.168627, 0.32549, 1 )
position = Vector2( 32, 36 )
z_index = -100
amount = 12
lifetime = 4.0
preprocess = 8.0
randomness = 0.39
emission_shape = 2
emission_rect_extents = Vector2( 32, 28 )
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
angular_velocity_random = 1.0
color_ramp = SubResource( 1 )

[node name="Darkfield" type="CPUParticles2D" parent="Particles"]
self_modulate = Color( 0.113725, 0.168627, 0.32549, 0.392157 )
position = Vector2( 32, -2 )
z_index = -30
amount = 15
lifetime = 20.0
texture = ExtResource( 13 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
radial_accel = 1.0
radial_accel_random = 1.0

[node name="Asteroids" type="Node2D" parent="Particles"]
position = Vector2( 0, -6.68513 )

[node name="Asteroid1" type="CPUParticles2D" parent="Particles/Asteroids"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 32, 0 )
z_index = -20
z_as_relative = false
amount = 1
lifetime = 15.0
preprocess = 15.0
draw_order = 1
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.35
color_ramp = SubResource( 2 )

[node name="Asteroid2" type="CPUParticles2D" parent="Particles/Asteroids"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 32, 0 )
z_index = -20
z_as_relative = false
amount = 1
lifetime = 15.0
preprocess = 10.0
draw_order = 1
texture = ExtResource( 10 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.35
color_ramp = SubResource( 2 )

[node name="Asteroid3" type="CPUParticles2D" parent="Particles/Asteroids"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 32, 0 )
z_index = -20
z_as_relative = false
amount = 2
lifetime = 15.0
preprocess = 7.0
draw_order = 1
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.35
color_ramp = SubResource( 2 )

[node name="Asteroid4" type="CPUParticles2D" parent="Particles/Asteroids"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 32, 0 )
z_index = -20
z_as_relative = false
amount = 1
lifetime = 15.0
preprocess = 18.0
draw_order = 1
texture = ExtResource( 11 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.35
color_ramp = SubResource( 2 )

[node name="Asteroid5" type="CPUParticles2D" parent="Particles/Asteroids"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 32, 0 )
z_index = -20
z_as_relative = false
amount = 2
lifetime = 15.0
preprocess = 23.0
draw_order = 1
texture = ExtResource( 12 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.35
color_ramp = SubResource( 2 )

[node name="Characters" type="Node" parent="."]

[node name="Spaceship" parent="Characters" instance=ExtResource( 1 )]
position = Vector2( 32, 46 )

[node name="Objects" type="Node" parent="."]

[node name="Obstacles" type="Node2D" parent="."]
position = Vector2( 34, 44 )

[node name="Wall1" parent="Obstacles" instance=ExtResource( 6 )]
visible = false
position = Vector2( -37, -45 )
scale = Vector2( 1, 40 )

[node name="Wall2" parent="Obstacles" instance=ExtResource( 6 )]
visible = false
position = Vector2( 30, -45 )
scale = Vector2( 1, 40 )

[node name="UFO" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( -8.25, 14 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
anchor_top = 0.00157118
anchor_bottom = 0.00157118
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD/Control"]
margin_top = -3.90014
margin_right = 64.0
margin_bottom = 8.09986
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.945098, 0.909804, 1 )
text = "345"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetsGo" parent="HUD/Control" instance=ExtResource( 15 )]
modulate = Color( 1, 1, 1, 0.333333 )

[node name="Spawners" type="Node" parent="."]

[node name="EnemySpawner" parent="Spawners" instance=ExtResource( 4 )]

[node name="Addons" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="Addons"]
position = Vector2( 32, 32 )
current = true

[node name="Screenshake" parent="Addons/Camera" instance=ExtResource( 14 )]

[node name="Tween" type="Tween" parent="Addons"]

[node name="Audio" type="Node2D" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 16 )
autoplay = true

[node name="Timers" type="Node2D" parent="."]

[node name="DifficultyTimer" type="Timer" parent="Timers"]
wait_time = 20.0
one_shot = true
autostart = true
[connection signal="tween_completed" from="Addons/Tween" to="." method="_on_Tween_tween_completed"]
